--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar py-4 navbar-expand-lg navbar-light">
      <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="/bwabootstrap/images/logo.png" width="187px" alt="">
+            <img src="bwabootstrap/images/logo.png" width="187px" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
                     </p>
                     <a href="#" class="btn btn-primary" role="button">Get Started</a>
                 </div>
-                <div class="col">
+                <div class="col d-none d-sm-block d-sm-none d-md-block">
                     <img src="bwabootstrap/images/hero-icon.png" width="600">
                 </div>
             </div>
